external-crates/move/crates/move-compiler/tests/move_check/parser/global_access_value.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/global_access_value.move:4:5
  │
4 │     }
  │     ^ Expected '::' after an address in a module access chain
  │
  = Access chains that start with '::' must be one of the following forms: 
      '::<address>::<module>', '::<address>::<module>::<member>

